# seita-weather-forecast

./: .gitignore  README.md  pimslog.md  pyproject.toml
.run/: Localhost.run.xml
app/: main.py
app/controllers/: forecastsController.py
app/controllers/forecastsController/: forecast_dto.py  forecast_response_dto.py  forecastsController.py
app/controllers/tomorrowController/: tomorrowController.py  tomorrow_response_dto.py
docs/: Weather-Forecasts.postman_collection.json
scripts/: convert_csv_to_duckdb.py  querying_the_duckdb.ipynb
