[tool.poetry]
name = "weather-forecasts"
version = "0.1.0"
description = ""
authors = ["pimmassink-rimon <pim.massink@rimon-ar.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
